# sim_agent

./: .env.test  .env.tests  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  report.json  requirements.txt
.github/workflows/: ci.yml
architecture/: architecture.excalidraw
evals/: EVAL_JUDGE_USAGE.md  README.md  base_eval.py  base_eval_db.py  base_sql_eval.py  conftest.py  llm_judge.py  metrics_collector.py  pytest.ini  utils.py
evals/sql_agent/: test_aggregate.py  test_construction.py  test_filter.py  test_grounding.py  test_join.py  test_pre_check.py  test_sql_e2e.py  test_sql_stages.py
evals/tool_agent/: e2e.yaml  ir.yaml  post_check.yaml  pre_check.yaml  test_e2e.py  test_enhance.py  test_ir.py  test_post_check.py  test_pre_check.py  test_tool_agent.py
notebooks/: agent.ipynb  data.ipynb  id2name.ipynb  llm_call.ipynb  name2id.ipynb  plot.ipynb  sql_adapter.ipynb
scripts/: gradio_app.py
src/agent/: bootstrap.py  config.py
tests/: conftest.py  mock_object.py
tests/data/: base_prompts.yaml  base_sql_prompts.yaml
tests/e2e/: test_api.py  test_cli.py
tests/eval/: test_e2e.py  test_ir.py
tests/evals/: SQL_EVAL_README.md  base_eval_db.py  base_sql_eval.py  llm_judge.py  metrics_collector.py  pytest.ini  response_validators.py  run_enhanced_evals.py  test_e2e.py  test_enhance.py  test_guardrails.py  test_ir.py  test_post_check.py  test_pre_check.py  test_sql_e2e.py  test_sql_stages.py  test_tool_agent.py  test_utils.py
tests/evaluation/: test_e2e.py
(+158 files in other folders)
